--- a/ThirdPartyAdapters/mopub/mopub/build.gradle
+++ b/ThirdPartyAdapters/mopub/mopub/build.gradle
@@ -16,7 +16,7 @@ ext {
 
 android {
     compileSdkVersion 28
-    buildToolsVersion "26.0.3"
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
         minSdkVersion 16
@@ -43,7 +43,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:17.2.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:customtabs:28.0.0'
-    implementation('com.mopub:mopub-sdk:5.4.1@aar') {
+    implementation('com.mopub:mopub-sdk-banner:5.6.0@aar') {
         transitive = true
     }
 }
